# libquicktime-vita

./: CMakeLists.txt  README.md
include/: codecs.h  config.h  lqt_funcprotos.h  lqt_private.h
include/quicktime/: lqt.h  lqt_codecapi.h  lqt_version.h
plugins/audiocodec/: lqt_audiocodec.c
plugins/ffmpeg/: audio.c  audio.c.orig  ffmpeg.h  lqt_ffmpeg.c  params.c  params.c.rej  params.h  video.c
plugins/videocodec/: lqt_videocodec.c
src/: log.c  lqt_bufalloc.c  lqt_codecinfo.c  lqt_codecs.c  lqt_quicktime.c  util.c
